--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <p class="text-black-50 mb-0">
                             Great software deserves great testing. We build automated test environments, integrate
                             seamless CI/CD pipelines (like GitLab CI), and continuously refine your software to
-                            eliminate risks before liftoff. Let us enhance your product’s resilience—giving your team
+                            eliminate risks before liftoff. Let us enhance your product's resilience—giving your team
                             confidence at every stage of development.</p>
                     </div>
                 </div>
@@ -174,12 +174,11 @@
                 <p class="mt-3 text-xl">Mateusz Sołtys</p>
                 <p class="text-uppercase mt-1 text-sm">Web Development Specialist</p>
             </div>
-            <!-- +4 Circle -->
-<div class="team-avatar">
-    <div class="team-more-avatar">+4</div>
-    <p class="mt-3 text-xl">More Developers</p>
-    <p class="text-uppercase mt-1 text-sm">&nbsp;</p>
-</div>
+            <div class="team-avatar">
+                <div class="team-more-avatar">+4</div>
+                <p class="mt-3 text-xl">More Developers</p>
+                <p class="text-uppercase mt-1 text-sm">&nbsp;</p>
+            </div>
         </div>
         <div class="container">
             <h2 class="text-white mb-5 text-center">Contact us!</h2>
