--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="team-avatar">
                 <img class="rounded-circle" src="assets/img/MS.png" alt="Mateusz Sołtys">
                 <p class="mt-3 text-xl">Mateusz Sołtys</p>
-                <p class="text-uppercase mt-1 text-sm">Web Development Specialist</p>
+                <p class="text-uppercase mt-1 text-sm">Web Dev Engineer</p>
             </div>
             <div class="team-avatar">
                 <div class="team-more-avatar">+4</div>
