--- a/privacy/index.html
+++ b/privacy/index.html
@@ -5,21 +5,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Privacy Policy - TatraSpace</title>
-    <link rel="stylesheet" href="/css/styles.css?v=1.0" />
-    <link rel="stylesheet" href="/css/wisent-wire.css" />
+    <link href="/css/styles.css?v=1.0" rel="stylesheet" />
+    <link href="/css/wisent-wire.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon2.png" />
 </head>
 
 <body>
-<nav class="wisent-navbar">
+    <nav class="wisent-navbar">
         <div class="wisent-navbar-inner">
             <a href="/" class="wisent-navbar-logo-link">
                 <img src="/assets/img/TatraSpace_logo.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
             </a>
-            <button class="wisent-navbar-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
+            <button class="wisent-navbar-toggle" aria-label="Toggle navigation"
+                onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="wisent-navbar-links">
+            <div class="wisent-navbar-links" id="navbarLinks">
                 <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
                 <a class="wisent-navbar-link" href="/#about">About us</a>
                 <a class="wisent-navbar-link" href="/#services">Services</a>
@@ -225,7 +226,6 @@
                 <a class="footer-link" href="/privacy/">Privacy Policy</a>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="/js/scripts.js"></script>
 </body>
 
