--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
-    <link href="css/styles.css?v=1.0" rel="stylesheet" />
-    <link href="css/wisent-wire.css" rel="stylesheet" />
+    <link href="/css/styles.css?v=1.0" rel="stylesheet" />
+    <link href="/css/wisent-wire.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                 onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="wisent-navbar-links">
+            <div class="wisent-navbar-links" id="navbarLinks">
                 <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
                 <a class="wisent-navbar-link" href="/#about">About us</a>
                 <a class="wisent-navbar-link" href="/#services">Services</a>
@@ -212,7 +212,6 @@
             <a class="footer-link" href="/privacy/">Privacy Policy</a>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/scripts.js"></script>
 </body>
 
