--- a/wisent-wire/index.html
+++ b/wisent-wire/index.html
@@ -10,8 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css"> <!-- shared site-wide -->
-    <link rel="stylesheet" href="/css/wisent-wire.css">
+    <link href="/css/styles.css?v=1.0" rel="stylesheet" />
+    <link href="/css/wisent-wire.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,10 +20,11 @@
             <a href="/" class="wisent-navbar-logo-link">
                 <img src="/assets/img/TatraSpace_logo.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
             </a>
-            <button class="wisent-navbar-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
+            <button class="wisent-navbar-toggle" aria-label="Toggle navigation"
+                onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="wisent-navbar-links">
+            <div class="wisent-navbar-links" id="navbarLinks">
                 <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
                 <a class="wisent-navbar-link" href="/#about">About us</a>
                 <a class="wisent-navbar-link" href="/#services">Services</a>
@@ -110,6 +111,7 @@
                 <a class="footer-link" href="/privacy/">Privacy Policy</a>
             </div>
         </footer>
+        <script src="/js/scripts.js"></script>
 </body>
 
 </html>
