fight with toggle

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -11,23 +11,22 @@
 </head>
 
 <body>
-    <nav class="wisent-navbar">
-        <div class="wisent-navbar-inner">
-            <a href="/" class="wisent-navbar-logo-link">
-                <img src="/assets/img/TatraSpace_logo.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
-            </a>
-            <button class="wisent-navbar-toggle" aria-label="Toggle navigation"
-                onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="wisent-navbar-links" id="navbarLinks">
-                <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
-                <a class="wisent-navbar-link" href="/#about">About us</a>
-                <a class="wisent-navbar-link" href="/#services">Services</a>
-                <a class="wisent-navbar-link" href="/#contact">Contact</a>
-            </div>
+<nav class="wisent-navbar">
+    <div class="wisent-navbar-inner">
+        <a href="/" class="wisent-navbar-logo-link">
+            <img src="/assets/img/TatraSpace_logo.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
+        </a>
+        <button class="wisent-navbar-toggle" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="wisent-navbar-links" id="navbarLinks">
+            <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
+            <a class="wisent-navbar-link" href="/#about">About us</a>
+            <a class="wisent-navbar-link" href="/#services">Services</a>
+            <a class="wisent-navbar-link" href="/#contact">Contact</a>
         </div>
-    </nav>
+    </div>
+</nav>
 
     <main class="privacy-page container px-4 px-lg-5 py-5">
 
