--- a/privacy/index.html
+++ b/privacy/index.html
@@ -7,6 +7,10 @@
     <title>Privacy Policy - TatraSpace</title>
     <link href="/css/styles.css?v=1.0" rel="stylesheet" />
     <link href="/css/wisent-wire.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/assets/favicon2.png" />
 </head>
 
