--- a/wisent-wire/index.html
+++ b/wisent-wire/index.html
@@ -7,9 +7,10 @@
     <title>WisentSpace - Remote Hardware Access Platform</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"
-        rel="stylesheet">
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
     <link href="/css/styles.css?v=1.0" rel="stylesheet" />
     <link href="/css/wisent-wire.css" rel="stylesheet" />
 </head>
