--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon2.png" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
     <link href="/css/styles.css?v=1.0" rel="stylesheet" />
     <link href="/css/wisent-wire.css" rel="stylesheet" />
@@ -40,8 +39,7 @@
             <div class="d-flex justify-content-center">
                 <div class="text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Software That Reaches Space!</h1>
-                    <h2 class="text-white-80 mx-auto mt-2 mb-5">TatraSpace is a Space software house that helps you get
-                        your product off the ground!</h2>
+                    <h2 class="text-white-80 mx-auto mt-2 mb-5">TatraSpace is a Space software house that helps you get your product off the ground!</h2>
                     <a class="btn btn-primary" href="#about">Get Started</a>
                 </div>
             </div>
@@ -56,11 +54,8 @@
                     <p class="text-white-80">
                         <strong>We make Space software smarter — fast.</strong>
                         <br>
-                        At TatraSpace, we know one thing for sure: better code isn't rocket science — it's just smart
-                        engineering.
-                        We boost software quality through automation, testability, and remote lab access. If you want
-                        cleaner,
-                        more reliable embedded systems without the usual slowdowns, we're the team to call.
+                        At TatraSpace, we know one thing for sure: better code isn't rocket science — it's just smart engineering.
+                        We boost software quality through automation, testability, and remote lab access. If you want cleaner, more reliable embedded systems without the usual slowdowns, we're the team to call.
                     </p>
                 </div>
             </div>
@@ -69,19 +64,16 @@
                     <h2 class="text-white mb-4">Our clients</h2>
                     <div class="row gx-5 gy-5 justify-content-center">
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/img/REVOLV_logo_dark_mode.png" alt="revolv" class="img-fluid mb-5"
-                                title="Revolv Space">
+                            <img src="assets/img/REVOLV_logo_dark_mode.png" alt="revolv" class="img-fluid mb-5" title="Revolv Space">
                         </div>
                         <div class="col-6 col-md-3 text-center">
                             <img src="assets/img/MukeLogo.jpeg" alt="muke" class="img-fluid mb-5" title="Muke">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5"
-                                title="AGH Lunar Tech">
+                            <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5" title="AGH Lunar Tech">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5"
-                                title="Space Locker">
+                            <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5" title="Space Locker">
                         </div>
                     </div>
                 </div>
@@ -89,67 +81,54 @@
         </div>
     </section>
 
-    <!-- Projects-->
+    <!-- Services (now as cards) -->
     <section class="projects-section bg-light" id="services">
         <div class="container px-4 px-lg-5">
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <h2 class="text-black mb-5 text-center">Services</h2>
-                <div class="col-xl-6 col-lg-6"></div>
-                <div class="col-xl-6 col-lg-6">
-                    <div class="featured-text-right text-center text-lg-left">
-                        <h4>Embedded Software Development & Consultancy</h4>
-                        <p class="text-black-50 mb-0">
-                            We craft embedded software that's clear, reliable, and ready for space—every single time.
-                            From thorough code reviews and careful audits to fully documented solutions, our software is
-                            built for longevity, ease of use and maintainability.
-                        </p>
-                    </div>
+            <h2 class="text-black mb-5 text-center">Services</h2>
+            <div class="contact-cards-grid services-cards-grid">
+                <div class="content-card text-center">
+                    <i class="fas fa-microchip contact-card-icon"></i>
+                    <h3>Embedded Software Development & Consultancy</h3>
+                    <p>
+                        We craft embedded software that's clear, reliable, and ready for space—every single time.
+                        From thorough code reviews and careful audits to fully documented solutions, our software is
+                        built for longevity, ease of use and maintainability.
+                    </p>
                 </div>
-            </div>
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-6 col-lg-5">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>Automated Testing & Quality Assurance</h4>
-                        <p class="text-black-50 mb-0">
-                            Great software deserves great testing. We build automated test environments, integrate
-                            seamless CI/CD pipelines (like GitLab CI), and continuously refine your software to
-                            eliminate risks before liftoff. Let us enhance your product's resilience—giving your team
-                            confidence at every stage of development.</p>
-                    </div>
+                <div class="content-card text-center">
+                    <i class="fas fa-robot contact-card-icon"></i>
+                    <h3>Automated Testing & Quality Assurance</h3>
+                    <p>
+                        Great software deserves great testing. We build automated test environments, integrate
+                        seamless CI/CD pipelines (like GitLab CI), and continuously refine your software to
+                        eliminate risks before liftoff. Let us enhance your product's resilience—giving your team
+                        confidence at every stage of development.
+                    </p>
                 </div>
-                <div class="col-xl-6 col-lg-7"></div>
-            </div>
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-6 col-lg-6"></div>
-                <div class="col-xl-6 col-lg-6">
-                    <div class="featured-text-right text-center text-lg-left">
-                        <h4>Mission Support</h4>
-                        <p class="text-black-50 mb-0">
-                            Having you're device in orbit demands robust missions plans, and
-                            that's exactly what we deliver. From detailed in-orbit test planning and ground station
-                            integration to proactive debugging and test scenario design, we provide comprehensive
-                            support throughout your mission lifecycle. We're here to ensure your project reaches orbit
-                            ready for success.
-                        </p>
-                    </div>
+                <div class="content-card text-center">
+                    <i class="fas fa-satellite-dish contact-card-icon"></i>
+                    <h3>Mission Support</h3>
+                    <p>
+                        Having your device in orbit demands robust mission plans, and that's exactly what we deliver.
+                        From detailed in-orbit test planning and ground station integration to proactive debugging
+                        and test scenario design, we provide comprehensive support throughout your mission lifecycle.
+                        We're here to ensure your project reaches orbit ready for success.
+                    </p>
                 </div>
-            </div>
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-6 col-lg-6">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>Payload Integration Services</h4>
-                        <p class="text-black-50 mb-0">
-                            Integrating payloads shouldn't slow you down—and with us, it
-                            won't. We streamline the integration of COTS components with your satellite bus, developing
-                            robust OBC software tailored for space-grade reliability. Focus on your mission goals; we'll
-                            handle the complexity and deliver results.
-                        </p>
-                    </div>
+                <div class="content-card text-center">
+                    <i class="fas fa-cube contact-card-icon"></i>
+                    <h3>Payload Integration Services</h3>
+                    <p>
+                        Integrating payloads shouldn't slow you down—and with us, it won't. We streamline the
+                        integration of COTS components with your satellite bus, developing robust OBC software
+                        tailored for space-grade reliability. Focus on your mission goals; we'll handle the
+                        complexity and deliver results.
+                    </p>
                 </div>
-                <div class="col-xl-6 col-lg-6"></div>
             </div>
         </div>
     </section>
+
     <section class="team-section-container">
         <h2 class="team-section-title">Our team</h2>
         <div class="team-grid">
