--- a/wisent-wire/index.html
+++ b/wisent-wire/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet" />
     <link href="/css/styles.css?v=1.0" rel="stylesheet" />
     <link href="/css/wisent-wire.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/assets/favicon4.png" />
 </head>
 
 <body>
