--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </div>
         </div>
         <div class="container">
-            <h2 class="text-white mb-5 text-center">Contact us!</h2>
+            <h2 class="text-white mb-5 text-center" id="contact">Contact us!</h2>
             <div class="contact-cards-grid">
                 <div class="content-card text-center">
                     <i class="fas fa-envelope contact-card-icon"></i>
