--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
     <link rel="icon" type="image/png" href="/assets/favicon4.png" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
     <link href="/css/styles.css?v=1.0" rel="stylesheet" />
     <link href="/css/wisent-wire.css" rel="stylesheet" />
 </head>
 
 <body>
-<nav class="wisent-navbar">
-    <div class="wisent-navbar-inner">
-        <a href="/" class="wisent-navbar-logo-link">
-            <img src="/assets/img/TatraSpace_logo.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
-        </a>
-        <button class="wisent-navbar-toggle" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="wisent-navbar-links" id="navbarLinks">
-            <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
-            <a class="wisent-navbar-link" href="/#about">About us</a>
-            <a class="wisent-navbar-link" href="/#services">Services</a>
-            <a class="wisent-navbar-link" href="/#contact">Contact</a>
+    <nav class="wisent-navbar">
+        <div class="wisent-navbar-inner">
+            <a href="/" class="wisent-navbar-logo-link">
+                <img src="/assets/img/TatraSpace_logo.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
+            </a>
+            <button class="wisent-navbar-toggle" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="wisent-navbar-links" id="navbarLinks">
+                <a class="wisent-navbar-link our-product-link" href="/wisent-wire/">Our product</a>
+                <a class="wisent-navbar-link" href="/#about">About us</a>
+                <a class="wisent-navbar-link" href="/#services">Services</a>
+                <a class="wisent-navbar-link" href="/#contact">Contact</a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
     <!-- Masthead-->
     <header class="masthead">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Software That Reaches Space!</h1>
-                    <h2 class="text-white-80 mx-auto mt-2 mb-5">TatraSpace is a Space software house that helps you get your product off the ground!</h2>
+                    <h2 class="text-white-80 mx-auto mt-2 mb-5">TatraSpace is a Space software house that helps you get
+                        your product off the ground!</h2>
                     <a class="btn btn-primary" href="#about">Get Started</a>
                 </div>
             </div>
@@ -54,8 +56,10 @@
                     <p class="text-white-80">
                         <strong>We make Space software smarter — fast.</strong>
                         <br>
-                        At TatraSpace, we know one thing for sure: better code isn't rocket science — it's just smart engineering.
-                        We boost software quality through automation, testability, and remote lab access. If you want cleaner, more reliable embedded systems without the usual slowdowns, we're the team to call.
+                        At TatraSpace, we know one thing for sure: better code isn't rocket science — it's just smart
+                        engineering.
+                        We boost software quality through automation, testability, and remote lab access. If you want
+                        cleaner, more reliable embedded systems without the usual slowdowns, we're the team to call.
                     </p>
                 </div>
             </div>
@@ -64,16 +68,19 @@
                     <h2 class="text-white mb-4">Our clients</h2>
                     <div class="row gx-5 gy-5 justify-content-center">
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/img/REVOLV_logo_dark_mode.png" alt="revolv" class="img-fluid mb-5" title="Revolv Space">
+                            <img src="assets/img/REVOLV_logo_dark_mode.png" alt="revolv" class="img-fluid mb-5"
+                                title="Revolv Space">
                         </div>
                         <div class="col-6 col-md-3 text-center">
                             <img src="assets/img/MukeLogo.jpeg" alt="muke" class="img-fluid mb-5" title="Muke">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5" title="AGH Lunar Tech">
+                            <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5"
+                                title="AGH Lunar Tech">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5" title="Space Locker">
+                            <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5"
+                                title="Space Locker">
                         </div>
                     </div>
                 </div>
@@ -180,6 +187,15 @@
                         </a>
                     </p>
                 </div>
+                <div class="content-card text-center">
+                    <i class="fab fa-linkedin contact-card-icon"></i>
+                    <h3>LinkedIn</h3>
+                    <p>
+                        <a href="https://www.linkedin.com/company/tatraspace" target="_blank" class="contact-card-link">
+                            Find us on LinkedIn!
+                        </a>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
@@ -187,7 +203,10 @@
         <div class="container text-center">
             <span class="footer-text">&copy; TatraSpace 2025</span> |
             <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
-            <a class="footer-link" href="/privacy/">Privacy Policy</a>
+            <a class="footer-link" href="/privacy/">Privacy Policy</a> |
+            <a class="footer-link" href="https://www.linkedin.com/company/tatraspace" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
         </div>
     </footer>
     <script src="/js/scripts.js"></script>
