--- a/privacy/index.html
+++ b/privacy/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="/assets/favicon4.png" />
 </head>
 
@@ -24,7 +25,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="wisent-navbar-links" id="navbarLinks">
-            <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
+            <a class="wisent-navbar-link our-product-link" href="/wisent-wire/">Our product</a>
             <a class="wisent-navbar-link" href="/#about">About us</a>
             <a class="wisent-navbar-link" href="/#services">Services</a>
             <a class="wisent-navbar-link" href="/#contact">Contact</a>
@@ -41,9 +42,11 @@
         <ol>
             <li><a href="#intro">Introduction</a></li>
             <li><a href="#collect">Information We Collect</a></li>
-            <li><a href="#cloudflare">Technical Information Through Cloudflare</a></li>
-            <li><a href="#email">Email Addresses for Waitlist</a></li>
-            <li><a href="#calendar">Google Calendar Appointment Scheduling</a></li>
+            <ol>    
+                <li><a href="#cloudflare">Technical Information Through Cloudflare</a></li>
+                <li><a href="#email">Email Addresses for Waitlist</a></li>
+                <li><a href="#calendar">Google Calendar Appointment Scheduling</a></li>
+            </ol>
             <li><a href="#legal-basis">Legal Basis for Processing</a></li>
             <li><a href="#retention">Data Retention</a></li>
             <li><a href="#rights">Your Rights Under GDPR</a></li>
@@ -222,13 +225,16 @@
             courts in Wrocław.</p>
 
         <hr>
-        <footer class="footer-custom mt-5">
-            <div class="container text-center">
-                <span class="footer-text">&copy; TatraSpace 2025</span> |
-                <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
-                <a class="footer-link" href="/privacy/">Privacy Policy</a>
-            </div>
-        </footer>
+    <footer class="footer-custom mt-5">
+        <div class="container text-center">
+            <span class="footer-text">&copy; TatraSpace 2025</span> |
+            <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
+            <a class="footer-link" href="/privacy/">Privacy Policy</a> |
+            <a class="footer-link" href="https://www.linkedin.com/company/tatraspace" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+    </footer>
         <script src="/js/scripts.js"></script>
 </body>
 
