--- a/wisent-wire/index.html
+++ b/wisent-wire/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link href="/css/styles.css?v=1.0" rel="stylesheet" />
     <link href="/css/wisent-wire.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="/assets/favicon4.png" />
@@ -26,7 +27,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="wisent-navbar-links" id="navbarLinks">
-            <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
+            <a class="wisent-navbar-link our-product-link" href="/wisent-wire/">Our product</a>
             <a class="wisent-navbar-link" href="/#about">About us</a>
             <a class="wisent-navbar-link" href="/#services">Services</a>
             <a class="wisent-navbar-link" href="/#contact">Contact</a>
@@ -41,7 +42,6 @@
                 
                 <div class="divider"></div>
                 
-                <!-- Signup Form moved to left column under divider -->
                 <div class="signup-form-container">
                     <div class="signup-form">
                         <h3>Join the waiting list</h3>
@@ -50,7 +50,6 @@
                                 <input type="email" name="EMAIL" id="mce-EMAIL" placeholder="Enter your email address" required>
                                 <button type="submit" name="subscribe" id="mc-embedded-subscribe">Keep me posted</button>
                             </div>
-                            <!-- Hidden field for bot protection -->
                             <div aria-hidden="true" style="position: absolute; left: -5000px;">
                                 <input type="text" name="b_bc671272e1ed4c96df2636b17_cd04771f34" tabindex="-1" value="">
                             </div>
@@ -105,13 +104,16 @@
             </div>
         </section>
     </div>
-            <footer class="footer-custom mt-5">
-            <div class="container text-center">
-                <span class="footer-text">&copy; TatraSpace 2025</span> |
-                <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
-                <a class="footer-link" href="/privacy/">Privacy Policy</a>
-            </div>
-        </footer>
+    <footer class="footer-custom mt-5">
+        <div class="container text-center">
+            <span class="footer-text">&copy; TatraSpace 2025</span> |
+            <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
+            <a class="footer-link" href="/privacy/">Privacy Policy</a> |
+            <a class="footer-link" href="https://www.linkedin.com/company/tatraspace" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+    </footer>
         <script src="/js/scripts.js"></script>
 </body>
 
