--- a/legal/index.html
+++ b/legal/index.html
@@ -11,10 +11,11 @@
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="/assets/favicon4.png" />
 </head>
 
-<body>=
+<body>
 <nav class="wisent-navbar">
     <div class="wisent-navbar-inner">
         <a href="/" class="wisent-navbar-logo-link">
@@ -24,7 +25,7 @@
             <i class="fas fa-bars"></i>
         </button>
         <div class="wisent-navbar-links" id="navbarLinks">
-            <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
+            <a class="wisent-navbar-link our-product-link" href="/wisent-wire/">Our product</a>
             <a class="wisent-navbar-link" href="/#about">About us</a>
             <a class="wisent-navbar-link" href="/#services">Services</a>
             <a class="wisent-navbar-link" href="/#contact">Contact</a>
@@ -100,16 +101,16 @@
             ul. Krzycka 71/2, 53-019 Wrocław, Poland<br>
             Company Registration Number (KRS): 0001031439<br>
             VAT ID (NIP): 8992958011<br>
-            Email: <a href="mailto:office@tatraspace.com">office@tatraspace.com</a></p>
+            <strong>Email:</strong><a class="footer-link" href="mailto:office@tatraspace.com">office@tatraspace.com</a></p>
 
         <hr>
 
         <h2>Contact</h2>
         <p>If you have any questions regarding these terms or our company’s legal information, please contact us at:<br>
-            <strong>Email:</strong> <a href="mailto:office@tatraspace.com">office@tatraspace.com</a>
+            <strong>Email:</strong><a class="footer-link" href="mailto:office@tatraspace.com">office@tatraspace.com</a>
         </p>
 
-        <p><em>Last updated: May 19, 2025</em></p>
+        <p><em>Last updated: September 10, 2025</em></p>
 
     </main>
 
@@ -117,7 +118,10 @@
         <div class="container text-center">
             <span class="footer-text">&copy; TatraSpace 2025</span> |
             <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
-            <a class="footer-link" href="/privacy/">Privacy Policy</a>
+            <a class="footer-link" href="/privacy/">Privacy Policy</a> |
+            <a class="footer-link" href="https://www.linkedin.com/company/tatraspace" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
         </div>
     </footer>
     <script src="/js/scripts.js"></script>
