--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <section class="projects-section bg-light" id="services">
         <div class="container px-4 px-lg-5">
             <h2 class="text-black mb-5 text-center">Services</h2>
-            <div class="contact-cards-grid services-cards-grid">
+            <div class="services-cards-grid">
                 <div class="content-card text-center">
-                    <i class="fas fa-microchip contact-card-icon"></i>
+                    <i class="fas fa-microchip services-card-icon"></i>
                     <h3>Embedded Software Development & Consultancy</h3>
                     <p>
                         We craft embedded software that's clear, reliable, and ready for space—every single time.
@@ -103,7 +103,7 @@
                     </p>
                 </div>
                 <div class="content-card text-center">
-                    <i class="fas fa-robot contact-card-icon"></i>
+                    <i class="fas fa-robot services-card-icon"></i>
                     <h3>Automated Testing & Quality Assurance</h3>
                     <p>
                         Great software deserves great testing. We build automated test environments, integrate
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="content-card text-center">
-                    <i class="fas fa-satellite-dish contact-card-icon"></i>
+                    <i class="fas fa-satellite-dish services-card-icon"></i>
                     <h3>Mission Support</h3>
                     <p>
                         Having your device in orbit demands robust mission plans, and that's exactly what we deliver.
@@ -123,7 +123,7 @@
                     </p>
                 </div>
                 <div class="content-card text-center">
-                    <i class="fas fa-cube contact-card-icon"></i>
+                    <i class="fas fa-cube services-card-icon"></i>
                     <h3>Payload Integration Services</h3>
                     <p>
                         Integrating payloads shouldn't slow you down—and with us, it won't. We streamline the
